--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@
   
   .botoes {
     display: block;
+
+    .ativo {
+      background-color: var(--botao-ativo);
+      border-bottom: 4px solid var(--verde);
+    }
   }
   @media screen and (min-widht :768px)
     .botoes { 
