--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@
     color: var(--verde);
     text-transform: uppercase
   }
-  @media screen and (min-widht :768px)
+  @media screen and (min-widht :768px){
     .botoes { 
         display : flex: 
     }
@@ -97,3 +97,4 @@
 .botao:last-child {
     border-radius : 0 40px 0 0;
 }
+  }
