--- a/style.css
+++ b/style.css
@@ -85,19 +85,19 @@
   .aba-conteudo-titulo-secundario {
     text-align: center;
     color: var(--verde);
-    text-transform: uppercase
-  }
+    text-transform: uppercase;
+    }
   
   .contador{
     font-size: 20px;
     text-align: center;
   }
   
-  @media screen and (min-widht :768px){
+  @media screen and (min-widht: 768px){
     .botoes { 
-        display : flex: 
+        display: flex; 
     }
-.botao:first-child{ 
+.botao:first-child { 
  border-radius: 40px 0 0 0;
 }
 .botao:last-child {
